--- a/package.json
+++ b/package.json
@@ -3,20 +3,49 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "check-types": "tsc --noEmit",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "format": "prettier --write .",
+    "test-all": "npx yarn-run-all lint check-types format lint:fix",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.1.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "date-fns": "^2.11.1",
+    "framer-motion": "^6",
     "gray-matter": "^4.0.2",
     "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@chakra-ui/storybook-addon": "^3.0.2",
+    "@storybook/addon-actions": "^6.5.6",
+    "@storybook/addon-essentials": "^6.5.6",
+    "@storybook/addon-interactions": "^6.5.6",
+    "@storybook/addon-links": "^6.5.6",
+    "@storybook/builder-webpack5": "^6.5.6",
+    "@storybook/manager-webpack5": "^6.5.6",
+    "@storybook/react": "^6.5.6",
+    "@storybook/testing-library": "^0.0.11",
     "@types/node": "^17.0.36",
     "@types/react": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "babel-loader": "^8.2.5",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-storybook": "^0.5.12",
+    "prettier": "2.6.2",
     "typescript": "^4.7.2"
   }
 }
