--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0"
   },
