--- a/.github/workflows/semantic_pull_request.yml
+++ b/.github/workflows/semantic_pull_request.yml
@@ -21,6 +21,7 @@ jobs:
           types: |
             fix
             feat
+            docs
           # Configure which scopes are allowed.
           scopes: |
             core
