fix: scope 周りの修正

--- a/.github/workflows/semantic_pull_request.yml
+++ b/.github/workflows/semantic_pull_request.yml
@@ -24,9 +24,9 @@ jobs:
             docs
 
           # Configure which scopes are allowed.
-          # scopes: |
-          #   core
-          #   ui
+          scopes: |
+            core
+            ui
 
           # Configure that a scope must always be provided.
           requireScope: false
