--- a/.github/workflows/semantic_pull_request.yml
+++ b/.github/workflows/semantic_pull_request.yml
@@ -43,10 +43,10 @@ jobs:
           # If `subjectPattern` is configured, you can use this property to override
           # the default error message that is shown when the pattern doesn't match.
           # The variables `subject` and `title` can be used within the message.
-          subjectPatternError: |
-            The subject "{subject}" found in the pull request title "{title}"
-            didn't match the configured pattern. Please ensure that the subject
-            doesn't start with an uppercase character.
+          # subjectPatternError: |
+          #   The subject "{subject}" found in the pull request title "{title}"
+          #   didn't match the configured pattern. Please ensure that the subject
+          #   doesn't start with an uppercase character.
 
           # If you use GitHub Enterprise, you can set this to the URL of your server
           # githubBaseUrl: https://github.myorg.com/api/v3
@@ -55,21 +55,22 @@ jobs:
           # Multiple labels can be separated by newlines.
           # If you want to rerun the validation when labels change, you might want
           # to use the `labeled` and `unlabeled` event triggers in your workflow.
-          ignoreLabels: |
-            bot
-            ignore-semantic-pull-request
+          # ignoreLabels: |
+          #   bot
+          #   ignore-semantic-pull-request
 
           # If you're using a format for the PR title that differs from the traditional Conventional
           # Commits spec, you can use these options to customize the parsing of the type, scope and
           # subject. The `headerPattern` should contain a regex where the capturing groups in parentheses
           # correspond to the parts listed in `headerPatternCorrespondence`.
           # See: https://github.com/conventional-changelog/conventional-changelog/tree/master/packages/conventional-commits-parser#headerpattern
-          headerPattern: '^(\w*)(?:\(([\w$.\-*/ ]*)\))?: (.*)$'
-          headerPatternCorrespondence: type, scope, subject
+          # headerPattern: '^(\w*)(?:\(([\w$.\-*/ ]*)\))?: (.*)$'
+          # headerPatternCorrespondence: type, scope, subject
+
           # For work-in-progress PRs you can typically use draft pull requests
           # from GitHub. However, private repositories on the free plan don't have
           # this option and therefore this action allows you to opt-in to using the
           # special "[WIP]" prefix to indicate this state. This will avoid the
           # validation of the PR title and the pull request checks remain pending.
           # Note that a second check will be reported if this is enabled.
-          wip: true
+          # wip: true
