--- a/.github/workflows/semantic_pull_request.yml
+++ b/.github/workflows/semantic_pull_request.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           # Configure which types are allowed.
           # Default: https://github.com/commitizen/conventional-commit-types
-          # types: |
-          #   fix
-          #   feat
-          #   docs
+          types: |
+            fix
+            feat
+            docs
 
           # Configure which scopes are allowed.
           # scopes: |
