chore: firebase, recoil 周りにインストール

--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "date-fns": "^2.11.1",
+    "firebase": "^9.9.0",
     "framer-motion": "^6",
     "gray-matter": "^4.0.2",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
+    "recoil": "^0.7.4",
+    "recoil-persist": "^4.2.0",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0"
   },
